# isaac-sim-mcp

./: .gitignore  CLAUDE.md  README.md  fmb1_world_poses.json  fmb2_world_poses.json  fmb3_world_poses.json  pyproject.toml
.claude/: settings.json
.planning/: .continue-here.md  .user_pause  AUTONOMOUS_MODE.md  HANDOFF.json  LAUNCH_REFERENCE.md  POLICIES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.tug/: README.md
agent/: chatgpt.py  claude.py
config/: cyclonedds.xml  ros_dds.env
docs/: DEBUG-GUIDE.md  parity-report.md
isaac_mcp/: __init__.py  client.py  gates.py  host.py  main.py  mcp_config.json  prompts.py  server.py  test_config.py
plans/: cross_repo_changes.json  dependency_map.md  prd.json  progress.txt
scripts/: _mesh_sweep.py  clean-isaacsim-caches.sh  collect_nucleus_asset.py  convert_husarion_rg2_urdf.py  fix_isaacsim_cuda.sh  glb_to_usd_wrapper.py  isaacsim_close.sh  isaacsim_launch.sh  isaacsim_restart.sh  launch_rg2.sh  launch_sim.sh  launch_ur_fake.sh  mcp_send.py  motion_analyze.py  motion_log.sh  motion_log_supervisor.sh  motion_logger.py  motion_plot.py  motion_sweep.py  motion_verify.py  parity_sweep_husarion_rg2.py  patch_soarm101_collision.py  patch_soarm101_contact_offsets.py  prime_usd_cache.py  probe_usd_bbox.py  register_permanent_exts.py  render_husarion_twin.py  restart-control-stack.sh  restart-isaacsim-soarm.sh  restart-isaacsim-ur5e.sh  restart_aruco_localizer.sh  restart_yoloe.sh  rewire_husarion_rg2_usd.py  scene_perf_diag.py  sim_bringup.sh  test_husarion_rg2_actuation.py  test_husarion_rg2_grasp.py  (+5 more)
(+478 files in other folders)
