[project]
name = "isaac-sim-mcp"
version = "0.1.0"
description = "Isaac Sim integration through the Model Context Protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    # Generic MCP server + Kit bridge (the transport half lifted out of this repo).
    # isaac_mcp.server is now a thin policy shim over kit_mcp.server.
    "kit-mcp",
]

[tool.uv.sources]
kit-mcp = { path = "../omni-kit-mcp", editable = true }

[project.scripts]
isaac-mcp = "isaac_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["isaac_mcp"]
